deploy/install.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: northscope
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: northscope
  namespace: northscope
  labels:
    app.kubernetes.io/name: northscope
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: northscope
  template:
    metadata:
      labels:
        app.kubernetes.io/name: northscope
    spec:
      serviceAccountName: northscope
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: northscope
          image: ghcr.io/emircanagac/northscope:latest
          imagePullPolicy: Always
          args:
            - -addr=:8080
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: northscope
  namespace: northscope
  labels:
    app.kubernetes.io/name: northscope
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: northscope
  ports:
    - name: http
      port: 80
      targetPort: http
